--- a/index.html
+++ b/index.html
@@ -140,10 +140,8 @@
                 <div class="row">
                     <div class="col-8">
                         <h1>Your <span class="emphasis">human</span> partner in a digital world</h1>
-                        <p>Web design and digital consulting services for small businesses in London, Surrey, Bromley, all across the UK and beyond.</p>
-                            <p><i class="fa-solid fa-circle-check"></i><span>Small Business Websites</span></p>
-                            <p><i class="fa-solid fa-circle-check"></i><span>E-commerce Websites</span></p>
-                            <p><i class="fa-solid fa-circle-check"></i><span>Online Learning Websites</span></p>
+                        <p>I take care of your tech, so you can focus on what matters. Supporting small businesses in London, Surrey, Bromley, all over the UK and beyond.</p>
+                            <p><i class="fa-solid fa-circle-check"></i><span>Web Design and Development</span></p>
                             <p class="padding-bottom"><i class="fa-solid fa-circle-check"></i><span>Digital Consulting Services</span></p>
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Start Your Project Today</a>
                     </div>
@@ -157,7 +155,7 @@
             <div class="container-1140">
                 <h2 class="center">What I Do</h2>
                 <hr>
-                <p class="center">Are you a small business owner looking to utilise technology more effectively in your business? If so,  you've come to the right place. Whether you are planning to create a website, build an online store, or you are simply seeking support with setting up digital tools, I can help you to bring your vision to life.</p>
+                <p class="center">Are you a small business owner looking to utilise technology more effectively in your business? If so, you've come to the right place. Whether you are planning to create a website, build an online store, or you are simply seeking support with setting up digital tools, I can help you to bring your vision to life.</p>
                 <div class="row">
                     <div class="col-3">
                         <div class="offer-card center">
@@ -222,7 +220,7 @@
                 <div class="row">
                     <div class="col-4"></div>
                     <div class="col-4"><i class="fa-solid fa-medal"></i><h3>More Than a Web Designer</h3>
-                        <p>As well as building beautiful websites, I also take care of other digital tasks so you can focus on what matters in your business.</p></div>
+                        <p>As well as building beautiful websites, I also take care of other digital tasks so you can have peace of mind.</p></div>
                     <div class="col-4"><i class="fa-solid fa-earth-americas"></i><h3>International Presence</h3>
                         <p>Is your business based outside of the UK? No problem - I have successfully worked with several customers around the globe.</p></div>
                 </div>
