--- a/faqs.html
+++ b/faqs.html
@@ -39,7 +39,7 @@ permalink: /faqs/
                     "name": "How can you help me?",
                     "acceptedAnswer": {
                         "@type": "Answer",
-                        "text": "I can help you to: improve your online presence, streamline processes by utilising technology more efficiently in your business, save time by taking care of your digital tasks so you can focus on what matters, save money by providing you with the most cost-effective solutions for your business. In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, security basics and more."
+                        "text": "I can help you to: improve your online presence, streamline processes by utilising technology more efficiently in your business, save time by taking care of your digital tasks so you can focus on what matters, save money by providing you with the most cost-effective solutions for your business. In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, cyber security basics and more."
                     }
                     },
                     {
@@ -272,7 +272,7 @@ permalink: /faqs/
                             <li>Save time by taking care of your digital tasks so you can focus on what matters</li>
                             <li>Save money by providing you with the most cost-effective solutions for your business.</li>
                         </ul>
-                        <p>In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, security basics and more.</p>
+                        <p>In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, cyber security basics and more.</p>
                     </div>
                 </div>
 
