--- a/new-haw-community-centre.html
+++ b/new-haw-community-centre.html
@@ -238,6 +238,7 @@ permalink: /new-haw-community-centre/
                         <p><strong>Some Areas I Cover</strong></p>
                         <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
+                        <p><a href="https://sybiltec.com/web-designer-bromley/">Web Design in Bromley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
                     <div class="col-2-4">
