--- a/sitemap.html
+++ b/sitemap.html
@@ -190,6 +190,7 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></li>
                     <li><a href="https://sybiltec.com/small-business-web-design/">Small Business Web Design</a></li>
                     <li><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></li>
+                    <li><a href="https://sybiltec.com/web-designer-bromley/">Web Design Bromley</a></li>
                     <li><a href="https://sybiltec.com/web-design-surrey/">Web Design Surrey</a></li>
                     <li><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></li>
                     <li><a href="https://sybiltec.com/training/">Workshops</a></li>
@@ -275,6 +276,7 @@ permalink: /sitemap/
                         <p><strong>Some Areas I Cover</strong></p>
                         <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
+                        <p><a href="https://sybiltec.com/web-designer-bromley/">Web Design in Bromley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
                     <div class="col-2-4">
