--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@ permalink: /about/
         }
         </script>
         <link rel="canonical" href="https://sybiltec.com/about/" />
-        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
@@ -206,19 +206,19 @@ permalink: /about/
                     <hr>
                     <p>Maintain an offline presence is important for developing relationships and growing a business, so you will often find me at a networking event or conference catching up with existing clients or making new connections. Here are a few recent events I have attended.</p>
                     <div class="row">
-                        <div class="col-4"><img src="images/photos/infosecurity-europe-2025.jpg"><p class="caption">Infosecurity Europe 2025</p></div>
-                        <div class="col-4"><img src="images/photos/cbdc-2025.JPG"><p class="caption">Tokenised Supply Chain Finance & CBDC Event, House of Lords, May 2025</p></div>
-                        <div class="col-4"><img src="images/photos/the-business-show-2024.jpg"><p class="caption">With Howard Freeman (Fortis DPC) and Phil Edelin (Lupasafe), the Business Show 2024</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/infosecurity-europe-2025.jpg" alt="Infosecurity Europe 2025"><p class="caption">Infosecurity Europe 2025</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/cbdc-2025.JPG" alt="Tokenised Supply Chain Finance & CBDC Event, House of Lords, May 2025"><p class="caption">Tokenised Supply Chain Finance & CBDC Event, House of Lords, May 2025</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/the-business-show-2024.jpg" alt="With Howard Freeman (Fortis DPC) and Phil Edelin (Lupasafe), the Business Show 2024"><p class="caption">With Howard Freeman (Fortis DPC) and Phil Edelin (Lupasafe), the Business Show 2024</p></div>
                     </div>
                     <div class="row">
-                        <div class="col-4"><img src="images/photos/bexley-business-support-showcase-2024.JPG"><p class="caption">With Michelle Smith (Clarity & Beyond) at the Bexley Business Support Showcase, June 2024</p></div>
-                        <div class="col-4"><img src="images/photos/greenwich-ladies-who-latte.jpg"><p class="caption">Greenwich Ladies Who Latte</p></div>
-                        <div class="col-4"><img src="images/photos/engine-house.JPG"><p class="caption">With Gabriel Ogunbiyi (Perfect Facilities)</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/bexley-business-support-showcase-2024.JPG" alt="With Michelle Smith (Clarity & Beyond) at the Bexley Business Support Showcase, June 2024"><p class="caption">With Michelle Smith (Clarity & Beyond) at the Bexley Business Support Showcase, June 2024</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/greenwich-ladies-who-latte.jpg" alt="Greenwich Ladies Who Latte"><p class="caption">Greenwich Ladies Who Latte</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/engine-house.JPG" alt="With Gabriel Ogunbiyi (Perfect Facilities)"><p class="caption">With Gabriel Ogunbiyi (Perfect Facilities)</p></div>
                     </div>
                     <div class="row">
-                        <div class="col-4"><img src="images/photos/peabody-meet-the-experts-for-finance-and-business-growth-2023.JPG"><p class="caption">With Gary Parker (CNT Associates) at Peabody's Meet the Experts for Finance and Business Growth Event, November 2023</p></div>
-                        <div class="col-4"><img src="images/photos/comic-con-2023.jpg"><p class="caption">With Imran Saged (Crazy Thumbs) at Comic Con 2023</p></div>
-                        <div class="col-4"><img src="images/photos/Zana-Sybil-Gary-Marysol.jpeg"><p class="caption">With Emrys Group International at the IoD</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/peabody-meet-the-experts-for-finance-and-business-growth-2023.JPG" alt="With Gary Parker (CNT Associates) at Peabody's Meet the Experts for Finance and Business Growth Event, November 2023"><p class="caption">With Gary Parker (CNT Associates) at Peabody's Meet the Experts for Finance and Business Growth Event, November 2023</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/comic-con-2023.jpg" alt="With Imran Saged (Crazy Thumbs) at Comic Con 2023"><p class="caption">With Imran Saged (Crazy Thumbs) at Comic Con 2023</p></div>
+                        <div class="col-4"><img src="https://sybiltec.com/images/photos/Zana-Sybil-Gary-Marysol.jpeg" alt="With Emrys Group International at the IoD"><p class="caption">With Emrys Group International at the IoD</p></div>
                     </div>
                 </div>
             </div>
