--- a/construction-web-design.html
+++ b/construction-web-design.html
@@ -183,9 +183,9 @@ permalink: /construction-web-design/
 
                 <h2>How Sybiltec Web Design Can Help Your Construction Business</h2>
                 
-                <p>Whether you have an existing website which needs redesigning, or you want to develop your first website, we can work with you to create the perfect website for your business. We will ensure that the design aligns with your brand, helping you to showcase the uniqueness of your business and stand out from the competition. Additionally, our excellent copywriting service will ensure that the correct keywords are placed on your website to maximise <a href="https://sybiltec.com/improve-website-seo/">search engine optimisation</a> (SEO). This is essential for your website to rank high in search results and to reach more potential customers.</p>
+                <p>Whether you have an existing website which needs redesigning, or you want to develop your first website, I can work with you to create the perfect website for your business. I will ensure that the design aligns with your brand, so you can showcase the uniqueness of your business and stand out from the competition. Additionally, an excellent copywriting service provided by one of my trusted partners will ensure that the correct keywords are placed on your website to maximise <a href="https://sybiltec.com/improve-website-seo/">search engine optimisation</a> (SEO). This is essential for your website to rank high in search results and to reach more potential customers.</p>
 
-                <p>These are some of the areas we can help with:</p>
+                <p>These are some of the areas I can help with:</p>
                 <ul>
                     <li>Bricklayers</li>
                     <li>Electricians</li>
@@ -194,7 +194,7 @@ permalink: /construction-web-design/
                     <li>Tiling contractors</li>
                 </ul>
 
-                <p>So <a href="https://sybiltec.com/contact/">get in touch</a> with us today to find out how we can help you with your <strong>construction industry web design</strong> needs.</p>
+                <p>So <a href="https://sybiltec.com/contact/">get in touch</a> with me today to find out how I can help you with your <strong>construction industry web design</strong> needs.</p>
                 </div>
 
                 </div>
@@ -207,7 +207,7 @@ permalink: /construction-web-design/
                 <div class="main section">
                 <div class="container-1140 padding-top padding-bottom">
                 <h2>Construction Industry Web Design Clients</h2>
-                <p>Sybiltec Web Design has helped construction companies to redesign and redevelop their websites. Take a look at our recent projects below to find out how we helped a lift consultancy and tiling contractor to improve their online presence.</p>
+                <p>Sybiltec Web Design has helped construction companies to redesign and redevelop their websites. Take a look at my recent projects below to find out how I helped a lift consultancy and tiling contractor to elevate their online presence.</p>
 
                 <div id="lcg-lift-consultancy" class="shadow-box-2">
                     <div class="row-2">
@@ -224,7 +224,7 @@ permalink: /construction-web-design/
                                 <li>Cookiebot setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">LCG Lift Consultancy >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@ permalink: /construction-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">LD Tiling Contractors >></a>
+                                target="_blank" rel="noopener noreferrer">Visit LD Tiling Contractors</a>
                             </div>
                         </div>
                     </div>
