--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -185,23 +185,23 @@ permalink: /ecommerce-websites/
 
                 <h2>Sybiltec's E-commerce Website Service</h2>
 
-                <p>Our e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, we can advise you to make the best choice. For more information, you can also read our blog post on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What are the Differences?</a></p>
+                <p>My e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, I can advise you to make the best choice. For more information, please read my blog post, <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What are the Differences?</a></p>
 
                 <h3>E-commerce Website Migration</h3>
 
-                <p>Are you dissatisfied with your current e-commerce platform? If you have an existing e-commerce site which you're looking to migrate, then we can also support you with this. We will help you to transfer your design, products, pages and forms to the new website, which will be built on Shopify or WooCommerce.</p>
+                <p>Are you dissatisfied with your current e-commerce platform? If you have an existing e-commerce site which you're looking to migrate, then I can also support you with this. I will help you to transfer your products, pages, customers and orders to the new website, which will be built on Shopify or WooCommerce.</p>
 
                 <h2>Who This Service is Suitable For</h2>
 
-                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then our e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see our <a href="https://sybiltec.com/small-business-web-design/">Small Business Website</a> service.</p>
+                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then my e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see my <a href="https://sybiltec.com/small-business-web-design/">Small Business Website</a> service.</p>
 
                 <h2>What the Process Involves</h2>
 
-                <p>We will begin by getting to know your business, and your purpose for building the website. We will gather your requirements and present you with the best solution. We'll then provide you with a quote, and if you indicate that you are happy to proceed, then we will send you an agreement via email and an invoice for the deposit, which is usually 33% of the total amount to be paid. Once we have received the signed agreement and the deposit, we will begin with the work.</p>
+                <p>I will begin by getting to know your business, and your purpose for building the website. I will gather your requirements and present you with the best solution. I'll then provide you with a quote, and if you indicate that you are happy to proceed, then I will send you an agreement via email and an invoice for the deposit, which is usually 33% of the total amount to be paid. Once I have received the signed agreement and the deposit, I will begin with the work.</p>
 
-                <p>We will create an initial design for your website and send you a link to this design for your review and feedback. We'll revise the design according to your comments, and when we are both happy with the design, we will proceed to build the website on Shopify or WooCommerce.</p>
+                <p>I will create an initial design for your website and send you a link to this design for your review and feedback. I'll revise the design according to your comments, and when we are both happy with the design, I will proceed to build the website on Shopify or WooCommerce.</p>
 
-                <p>Please send us the content that you wish to be uploaded to the website, including:</p>
+                <p>Please provide the content that you wish to be uploaded to the website, including:</p>
                 <ul>
                     <li>Company logo</li>
                     <li>Product images, descriptions* and prices</li>
@@ -213,21 +213,43 @@ permalink: /ecommerce-websites/
                     <li>Any other content, like videos and photos.</li>
                 </ul>
 
-                <p>*If you cannot provide the written content, we offer a copywriting service at an additional cost. Please let us know during our initial consultation if you require this service.</p>
+                <p>*For optimum results, it is preferable to utilise a professional copywriter to produce the written content. I can recommend the most appropriate expert according to your industry, budget and requirements. Please let me know during our initial consultation if you require this service.</p>
 
                 <h3>Additional Considerations for Shopify Sites</h3>
 
-                <p>Your Shopify website will be built on a Shopify <em>development store</em>. Whilst the store is in development mode, you will not pay any Shopify hosting fees, and you will not be able to take any live orders. When the store is ready to launch, you will need to choose a Shopify plan - you must do this to start making sales on your website. At this point onwards you will start paying the hosting fees. The Basic Shopify plan is currently £25/month + VAT.</p>
+                <p>Your Shopify website will be built on a Shopify <em>development store</em>. Whilst the store is in development mode, you will not pay any Shopify hosting fees, and you cannot take any live orders. When the store is ready to launch, you will need to choose a Shopify plan - you must do this to start making sales on your website. At this point onwards you will start paying the hosting fees. The Basic Shopify plan is currently £25/month + VAT.</p>
 
                 <h3>Additional Considerations for WooCommerce Sites</h3>
 
-                <p>WooCommerce is a plugin which works with the WordPress software. You will need to choose a hosting provider so that we can set up WordPress and build the site. We can help you to select the hosting service that is most suitable for your needs.</p>
+                <p>WooCommerce is a plugin which works with the WordPress software. You will need to choose a hosting provider so that we can set up WordPress and build the site. I can help you to select the hosting service that is most suitable for your needs.</p>
 
-                <p>You must maintain your WordPress site on a regular basis to keep plugins, themes and WordPress core files up to date. Being a busy business owner, you probably don't have the time to spend maintaining your website, so please consider taking up our <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a> service for help with managing your site.</p>
+                <p>You must maintain your WordPress site on a regular basis to keep plugins, themes and WordPress core files up to date. Being a busy business owner, you probably don't have the time to spend maintaining your website, so please consider taking up my <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a> service for help with managing your site.</p>
 
                 <h2>Examples of E-commerce Websites</h2>
 
-                <p>Check out these examples of online stores that we have developed for past clients:</p>
+                <p>Check out these examples of online stores that I have developed for past clients:</p>
+
+                <div id="johniq-butchers" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/johniq-butchers.png" alt="JohniQ Butchers">
+                        </div>
+                        <div class="col-7">
+                            <h2>JohniQ Butchers</h2>
+                            <p><strong>Family-run butchers in Beckenham</strong></p>
+                            <ul>
+                                <li>E-commerce store development</li>
+                                <li>Migration from Squarespace to Shopify</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://www.johniq.co.uk/" 
+                                target="_blank" rel="noopener noreferrer">Visit JohniQ Butchers</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div id="crazy-thumbs" class="shadow-box-2">
                     <div class="row-2">
@@ -246,7 +268,7 @@ permalink: /ecommerce-websites/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">View Crazy Thumbs >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">Visit Crazy Thumbs</a>
                             </div>
                         </div>
                     </div>
@@ -268,28 +290,7 @@ permalink: /ecommerce-websites/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://astonsoflondon.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Astons of London >></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="fortis-dpc" class="shadow-box-2">                         
-                    <div class="row-2">
-                        <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Fortis DPC (Data Protection Compliance)">                         
-                        </div>
-                        <div class="col-7">
-                            <h2>Fortis DPC</h2>
-                            <p><strong>Complete cyber security and data protection compliance solutions</strong></p>
-                            <ul>
-                                <li>Website redesign</li>
-                                <li>WooCommerce integration</li>
-                                <li>Google Analytics setup</li>
-                                <li>Google Search Console submission</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/fortis-dpc/">Fortis DPC >></a>
+                                target="_blank" rel="noopener noreferrer">Visit Astons of London</a>
                             </div>
                         </div>
                     </div>
@@ -311,7 +312,7 @@ permalink: /ecommerce-websites/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/cnt-associates/">View CNT Associates >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/cnt-associates/">Visit CNT Associates</a>
                             </div>
                         </div>
                     </div>
@@ -334,7 +335,7 @@ permalink: /ecommerce-websites/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://meitamlondon.com/" 
-                                target="_blank" rel="noopener noreferrer">View Meitam London >></a>
+                                target="_blank" rel="noopener noreferrer">Visit Meitam London</a>
                             </div>
                         </div>
                     </div>
@@ -435,7 +436,7 @@ permalink: /ecommerce-websites/
                     </div>
                 </div>
 
-                <p>Are you a small business owner looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact/">Contact us</a> today.</p>
+                <p>Are you a small business owner looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact/">Contact me</a> today.</p>
             </div>
         </div>
         <div class="contact section">
