Update Web Design Bexley

--- a/website-design.html
+++ b/website-design.html
@@ -256,7 +256,7 @@ permalink: /website-design/
                                 <li>Cookiebot setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">LCG Lift Consultancy >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -276,7 +276,7 @@ permalink: /website-design/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/bexley-linkup/">Bexley Linkup >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/bexley-linkup/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@ permalink: /website-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">LD Tiling Contractors >></a>
+                                target="_blank" rel="noopener noreferrer">Visit LD Tiling Contractors</a>
                             </div>
                         </div>
                     </div>
@@ -318,7 +318,7 @@ permalink: /website-design/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/happily-clappily-ever-laughter/">Happily Clappily Ever Laughter >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/happily-clappily-ever-laughter/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@ permalink: /website-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://pathways21.com" 
-                                target="_blank" rel="noopener noreferrer">Pathways 21 >></a>
+                                target="_blank" rel="noopener noreferrer">Visit Pathways 21</a>
                             </div>
                         </div>
                     </div>
@@ -362,7 +362,7 @@ permalink: /website-design/
                                 <li>Website review</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/cnt-associates/">CNT Associates >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/cnt-associates/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -384,7 +384,7 @@ permalink: /website-design/
                             </ul>              
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://bluehorizonlnw.com/"
-                                target="_blank" rel="noopener noreferrer">Blue Horizon LNW >></a>
+                                target="_blank" rel="noopener noreferrer">Visit Blue Horizon LNW</a>
                             </div>
                         </div>
                     </div>
@@ -408,7 +408,7 @@ permalink: /website-design/
                             </ul>   
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://future-communities.org.uk"
-                                target="_blank" rel="noopener noreferrer">Future Communities >></a>
+                                target="_blank" rel="noopener noreferrer">Visit Future Communities</a>
                             </div>
                         </div>
                     </div>
