--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -183,7 +183,7 @@ permalink: /web-design-surrey/
                     <li>Organic search traffic is still one of the best ways to generate qualified leads.</li>
                 </ul>
 
-                <p>If you do not already have a website, it's time to start thinking about building one. Or, if you have an existing site but it's not working for you for any reason, consider restructuring or redesigning it. Are you a <strong>small business owner in Surrey</strong> seeking support with your website? Contact us today to find out how we can help.</p>
+                <p>If you do not already have a website, it's time to start thinking about building one. Or, if you have an existing site but it's not working for you for any reason, consider restructuring or redesigning it. Are you a <strong>small business owner in Surrey</strong> seeking support with your website? Contact me today to find out how I can help.</p>
 
                 </div>
 
@@ -197,7 +197,7 @@ permalink: /web-design-surrey/
                 <div class="main section">
                 <div class="container-1140 padding-top padding-bottom">
                 <h2>Web Design Clients in Surrey</h2>
-                <p>We have worked with charities and small businesses in Surrey to help improve their websites and online presence. Below are some examples.</p>
+                <p>I have worked with small businesses in Surrey to help improve their websites and online presence. Below are some examples.</p>
 
                 <div id="fortis-dpc" class="shadow-box-2">                         
                     <div class="row-2">
@@ -206,8 +206,8 @@ permalink: /web-design-surrey/
                         </div>
                         <div class="col-7">
                             <h2>Fortis DPC</h2>
-                            <p><strong>Delivering complete cyber security and data protection compliance solutions</strong></p>
-                            <p>We redesigned Fortis DPC's website with a brand new look and feel which upholds the company's values of strength, security and trust. We also set up the e-commerce functionality to showcase the new range of digital services being offered. Services provided:</p>
+                            <p><strong>Cyber security, ISO, PCI DSS, GDPR and data protection compliance solutions</strong></p>
+                            <p>I redesigned Fortis DPC's website with a brand new look and feel which represents the company's values of strength, security and trust. E-commerce functionality was set up to showcase the new range of digital products to be offered. Services provided:</p>
                             <ul>
                                 <li>Website redesign</li>
                                 <li>WooCommerce integration</li>
@@ -215,7 +215,7 @@ permalink: /web-design-surrey/
                                 <li>Google Analytics setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/fortis-dpc/">Fortis DPC >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/fortis-dpc/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@ permalink: /web-design-surrey/
                             <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="Web design for New Haw Community Centre, Woodham, Surrey">                         
                         </div>
                         <div class="col-7">
-                            <h2>New Haw Community Centre, Woodham</h2>
+                            <h2>New Haw Community Centre</h2>
                             <p><strong>At the Centre of Our Community</strong></p>
                             <p>The Community Centre benefits from a fresh, modern design and an improved booking system. Services provided:</p>
                             <ul>
@@ -237,7 +237,7 @@ permalink: /web-design-surrey/
                                 <li>Google Analytics setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -251,17 +251,16 @@ permalink: /web-design-surrey/
                         <div class="col-7">
                             <h2>Crazy Thumbs</h2>
                             <p><strong>Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</strong></p>
-                            <p>We helped Crazy Thumbs enjoy a seamless transition between operating via their physical store and the online experience. We recommended Shopify as the best choice for their e-commerce channel.</p>
+                            <p>I helped Crazy Thumbs develop a seamless transition between operating via their physical store and the online experience. I recommended Shopify as the best choice for their e-commerce channel.</p>
                             <ul>
                                 <li>Shopify store development</li>
                                 <li>Advanced navigation system</li>
-                                <li>Sound effects</li>
-                                <li>Embedded Twitch videos</li>
+                                <li>Loyalty programme</li>
                                 <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">Crazy Thumbs >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">Read Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -275,43 +274,44 @@ permalink: /web-design-surrey/
                         <div class="col-7">
                             <h2>The GDPR Compliance Consultancy</h2>
                             <p><strong>Compliance, Delivered</strong></p>
-                            <p>The GDPR Compliance Consultancy required a website refresh and error fixing to improve SEO and increase traffic to the website. Services provided:</p>
+                            <p>The GDPR Compliance Consultancy required a website refresh and error fixing to improve SEO and increase lead generation. Services provided:</p>
                             <ul>
                                 <li>Website refresh</li>
                                 <li>SEO improvements</li>
                                 <li>Blog post upload</li>
-                                <li>Theme customisations</li>
                                 <li>Google Search Console submission</li>
-                                <li>Google Analytis setup</li>
+                                <li>Google Analytics setup</li>
                             </ul>        
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
-                                target="_blank" rel="noopener noreferrer">The GDPR Compliance Consultancy >></a>
+                                target="_blank" rel="noopener noreferrer">Visit The GDPR Compliance Consultancy</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <h2>Why Choose Sybiltec's Services</h2>
-                <p>At Sybiltec, we understand what makes websites work. We'll build a website for you that meets your business' individual needs. Here's how you'll benefit from the service:</p>
+                <h2>Why Choose My Services</h2>
+                <p>I understand what makes websites work. I'll build a website for you that meets your business' individual needs. Here's how you'll benefit from the service:</p>
                 <ul>
                     <li>We can make a start on your project right away and you'll be sent regular updates on the progress of your project, so you won't be kept waiting</li>
                     <li>You'll receive a high quality service without the high costs that agencies charge</li>
                     <li>You'll receive a custom design that's aligned with your business' unique brand and values</li>
                     <li>You will be able to edit the website yourself after it has launched, saving you time and money</li>
-                    <li>We will communicate with you using jargon-free language</li>
+                    <li>I will communicate with you using jargon-free language</li>
                 </ul>
 
                 <h2>How the Web Design Process Works</h2>
-                <p><a href="https://sybiltec.com/contact/">Contact us</a> today to arrange a free initial consultation. During the consultation, we'll ask you some questions about your business and your reason for needing our website services. It's also a chance for you to ask us anything and determine if we are a good fit for each other. If you would like to take things further, we'll arrange a longer, in-depth conversation to understand your business and requirements in more detail.</p>
+                <p><a href="https://sybiltec.com/contact/">Contact me</a> today to arrange a free initial consultation. During the consultation, I'll ask you some questions about your business and your reason for needing my website services. It's also a chance for you to ask me anything and determine if we are a good fit for each other.</p>
 
-                <p>If after this stage you are interested in commissioning our web design services, you'll be sent a quotation and an agreement which outlines the work to be carried out and the associated fees. There are no hidden charges, so you can be sure that the price quoted to you will be the price you pay.</p>
+                <p>If after this stage you are interested in commissioning my web design services, you'll be sent a quotation and an agreement which outlines the work to be carried out and the associated fees. There are no hidden charges, so you can be sure that the price quoted to you will be the price you pay.</p>
 
-                <p>Once the agreement has been signed by you, we will begin by planning the website structure - this will be in the form of a sitemap, and a list of pages (URLs) to be created for the site. </p>
+                <p>Once the agreement has been signed by you, I will begin by planning the website structure - this will be in the form of a sitemap, and a list of pages (URLs) to be created for the site.</p>
 
-                <p>The next stage will involve creating a design for the website, beginning with the homepage. You'll be asked for feedback on the design, so the faster we can receive the feedback from you, the quicker we'll be able to progress onto the next stage.</p>
+                <p>The next stage will involve creating a design for the website, beginning with the homepage. You'll be asked for feedback on the design, so the faster I can receive the feedback from you, the quicker we'll be able to progress onto the next stage.</p>
 
-                <p>When we agree on the final version of the designs, your website will be built on the most suitable platform, whether that is WordPress, Wix or Shopify. Finally, we will carry out thorough testing of the website to ensure that all functions are working correctly before launch.</p> 
+                <p>When we agree on the final version of the designs, your website will be built on the most suitable platform, whether that is WordPress, Wix or Shopify. Finally, I will carry out thorough testing of the website to ensure that all functions are working correctly before launch.</p> 
+
+                <p>I'll ensure to announce the launch of your new website on my social media channels for additonal exposure.</p>
 
                 <p>For further information on the website design process, please read the article <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
             </div>
