--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -204,7 +204,7 @@ permalink: /small-business-web-design/
                             <h2>Realizzato</h2>
                             <p><strong>Premium, sustainable coffee liqueur</strong></p>
                             <ul>
-                                <li>Web design</li>
+                                <li>Web design and development</li>
                                 <li>WooCommerce integration</li>
                                 <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
