--- a/contact.html
+++ b/contact.html
@@ -168,29 +168,26 @@ permalink: /contact/
                     <li>
                         Contact Me
                     </li>
-                </ol>
-                <h2>Let's Work Together</h2>
-                <p>You won't find any AI chatbots on this website, so please feel free to contact me on the following details to speak with a real person.</p>
-                <p>I look forward to hearing from you :)</p>
-                <ul>
-                    <li>Email: <a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></li>
-                    <li>Phone: <a href="tel:00447768059730">07768 059730</a></li>
-                </ul>
-                <h2>Opening Hours</h2>
-                <ul>
-                    <li>Monday: 9am-5pm</li>
-                    <li>Tuesday: 9am-5pm</li>
-                    <li>Wednesday: 9am-5pm</li>
-                    <li>Thursday: 9am-5pm</li>
-                    <li>Friday: 9am-5pm</li>
-                    <li>Saturday: closed</li>
-                    <li>Sunday: closed</li>
-                    <li>Bank holidays: closed</li>
-                </ul>
+                </ol>              
+                <div class="row">
+                    <div class="col-6 contact-me">
+                        <h2>Let's Work Together</h2>
+                        <p>You won't find any AI chatbots on this website, so please feel free to contact me on the following details to speak with a real person. I look forward to hearing from you :)</p>
+                        <p><i class="fa-solid fa-phone"></i>Email: <a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></p>
+                        <p><i class="fa-solid fa-envelope"></i>Phone: <a href="tel:00447768059730">07768 059730</a></p>
+                        <h3>Opening Hours</h3>
+                        <ul>
+                            <li>Monday-Friday: 9am-5pm</li>
+                            <li>Saturday, Sunday and bank holidays: closed</li>
+                        </ul>
+                    </div>
+                    <div class="col-6">
+                         <div id="map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.9393055998826!2d0.13990957669233578!3d51.49598127181063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8af9fc9038dc5%3A0xd2224f2c04e6bc6d!2sInnovation%20Centre%2C%202%20Veridion%20Way%2C%20Erith%20DA18%204AL!5e0!3m2!1sen!2suk!4v1754321951989!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.9393055998826!2d0.13990957669233578!3d51.49598127181063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8af9fc9038dc5%3A0xd2224f2c04e6bc6d!2sInnovation%20Centre%2C%202%20Veridion%20Way%2C%20Erith%20DA18%204AL!5e0!3m2!1sen!2suk!4v1754321951989!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="contact section">
             <div class="container-1140">
