--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="row">
                     <div class="col-8">
                         <h1>Your <span class="emphasis">human</span> partner in a digital world</h1>
-                        <p>I take care of your tech, so you can focus on what matters. Supporting small businesses in London, Surrey, Bromley, all over the UK and beyond.</p>
+                        <p>A freelance web designer and digital services consultant supporting small businesses in London, Surrey, Bromley, all over the UK and beyond. I take care of your tech, so you can focus on what matters. </p>
                             <p><i class="fa-solid fa-circle-check"></i><span>Web Design and Development</span></p>
                             <p class="padding-bottom"><i class="fa-solid fa-circle-check"></i><span>Digital Consulting Services</span></p>
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Start Your Project Today</a>
