--- a/training.html
+++ b/training.html
@@ -183,9 +183,9 @@ permalink: /training/
                         <div class="col-7">
                             <h3>Online Wellbeing for Women Over 40</h3>
                             <p><strong>📅 Thursday 2nd October 2025, 11am-12pm BST</strong></p>
-                            <p>📍 Online</p>
+                            <p>Learn tools and techniques to to reset your online habits, and confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload</p>
                             <div class="padding-btn">
-                                <a class ="btn-primary" rel="noopener noreferrer">Booking Coming Soon</a>
+                                <a class ="btn-primary" href="https://www.eventbrite.com/e/online-wellbeing-for-women-over-40-a-free-webinar-tickets-1663261934219" target="_blank" rel="noopener noreferrer">Register Now</a>
                             </div>
                         </div>
                     </div>
