--- a/training.html
+++ b/training.html
@@ -32,13 +32,13 @@ permalink: /training/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Training, Workshops & Webinars | Sybiltec Web Design</title>       
-        <meta name="Description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates.">
+        <meta name="Description" content="I regularly deliver workshops in partnership with CNT Associates and GLL. To upskill or refresh your knowledge, book onto one or more of these free sessions.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/training/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Training, Workshops & Webinars | Sybiltec Web Design" />
-        <meta property="og:description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates." />
+        <meta property="og:description" content="I regularly deliver workshops in partnership with CNT Associates and GLL. To upskill or refresh your knowledge, book onto one or more of these free sessions." />
         <meta property="og:url" content="https://sybiltec.com/training/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -173,17 +173,17 @@ permalink: /training/
                 </ol>
 
                 <h2>Upcoming Events</h2>
-                <p>I regularly facilitate workshops hosted by my partner organisations, CNT Associates and GLL. Please see the list of upcoming events below.</p>
+                <p>I regularly facilitate workshops hosted by my partner organisations, CNT Associates, Future Communities and GLL. Whether you want to upskill, or refresh your knowledge on a particular topic, book onto one or more of the free sessions below.</p>
 
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/events/FC-01-Online-Wellbeing-for-Women-Over-40-October-2025-940x492.png" alt="Online Wellbeing for Women Over 40">
+                            <img src="https://sybiltec.com/images/events/FC-01-Online-Wellbeing-for-Women-Over-40-October-2025-940x492.png" alt="Online Wellbeing for Women Over 40">
                         </div>
                         <div class="col-7">
                             <h3>Online Wellbeing for Women Over 40</h3>
                             <p><strong>📅 Thursday 2nd October 2025, 11am-12pm BST</strong></p>
-                            <p>Learn tools and techniques to to reset your online habits, and confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload</p>
+                            <p>Learn tools and techniques to reset your online habits, and build confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload.</p>
                             <div class="padding-btn">
                                 <a class ="btn-primary" href="https://www.eventbrite.com/e/online-wellbeing-for-women-over-40-a-free-webinar-tickets-1663261934219" target="_blank" rel="noopener noreferrer">Register Now</a>
                             </div>
@@ -194,10 +194,10 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/events/TB-03-Developing-a-Digital-Marketing-Strategy-for-Your-Business-940x492.png" alt="Developing a Digital Marketing Strategy for Your Business">
+                            <img src="https://sybiltec.com/images/events/TB-03-Developing-a-Digital-Marketing-Strategy-940-492.png" alt="Developing a Digital Marketing Strategy">
                         </div>
                         <div class="col-7">
-                            <h3>Developing a Digital Marketing Strategy for Your Business</h3>
+                            <h3>Developing a Digital Marketing Strategy</h3>
                             <p><strong>📅 Thursday 16th October 2025, 11am-12pm BST</strong></p>
                             <p>Marketing your business effectively is an essential step for gaining exposure to the right audience and to start making sales. Join our free webinar to learn how to develop a marketing strategy for your business.</p>
                             <div class="padding-btn">
@@ -210,11 +210,11 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/events/start-up-wandsworth-crafting-perfect-website-small-business.jpg" alt="Crafting the Perfect Website for Your Small Business">
+                            <img src="https://sybiltec.com/images/events/start-up-wandsworth-crafting-perfect-website-small-business.jpg" alt="Crafting the Perfect Website for Your Small Business">
                         </div>
                         <div class="col-7">
                             <h3>Crafting the Perfect Website for Your Small Business</h3>
-                            <p><strong>📅 Thursday 23rd October 2025, 11am-12pm BST</strong></p>
+                            <p><strong>📅 Thursday 23rd October 2025, 11am-1pm BST</strong></p>
                             <p>Attend this in-person workshop to learn how to create a professional, high-converting website with expert tips on design, UX, SEO, and online sales strategies.</p>
                             <div class="padding-btn">
                                 <a class ="btn-primary" href="https://www.eventbrite.co.uk/e/crafting-the-perfect-website-for-your-small-business-tickets-1589629176659" target="_blank" rel="noopener noreferrer">Register Now</a>
@@ -226,7 +226,7 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/events/TB-04-Support-for-Women-Led-Businesses-940x492.png" alt="Support for Women-Led Businesses">
+                            <img src="https://sybiltec.com/images/events/TB-04-Support-for-Women-Led-Businesses-940x492.png" alt="Support for Women-Led Businesses">
                         </div>
                         <div class="col-7">
                             <h3>Support for Women-Led Businesses</h3>
@@ -242,7 +242,7 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/events/TB-05-AI-for-Beginners-940x492.png" alt="AI for Beginners">
+                            <img src="https://sybiltec.com/images/events/TB-05-AI-for-Beginners-940x492.png" alt="AI for Beginners">
                         </div>
                         <div class="col-7">
                             <h3>AI for Beginners</h3>
