--- a/faqs.html
+++ b/faqs.html
@@ -39,7 +39,7 @@ permalink: /faqs/
                     "name": "How can you help me?",
                     "acceptedAnswer": {
                         "@type": "Answer",
-                        "text": "I can help you to: improve your online presence, streamline processes by utilising technology more efficiently in your business, save time by taking care of your digital tasks so you can focus on what matters, save money by providing you with the most cost-effective solutions for your business. In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, cyber security basics and more."
+                        "text": "I can help you to: improve your online presence, streamline processes by utilising technology more efficiently in your business, save time by taking care of your digital tasks so you can focus on what matters, cut costs by providing you with affordable solutions for your business and protect your business from common online threats. In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, automation, cyber security basics and more."
                     }
                     },
                     {
@@ -269,9 +269,10 @@ permalink: /faqs/
                             <li>Improve your online presence</li>
                             <li>Streamline processes by utilising technology more efficiently in your business</li>
                             <li>Save time by taking care of your digital tasks so you can focus on what matters</li>
-                            <li>Save money by providing you with the most cost-effective solutions for your business.</li>
+                            <li>Cut costs by providing you with affordable solutions for your business</li>
+			    <li>Protect your business from common online threats.</li>
                         </ul>
-                        <p>In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, cyber security basics and more.</p>
+                        <p>In short, I can support you with web design, e-commerce store development, e-learning platforms, CRM setup, analytics, automation, cyber security basics and more.</p>
                     </div>
                 </div>
 
