--- a/about.html
+++ b/about.html
@@ -294,21 +294,21 @@ permalink: /about/
                                     alt="Udemy The Complete 2022 Software Testing Bootcamp">
                         </div>
                         <div class="col-2-4">
-                            <img src="images/certifications/9cb1831f-e10c-4694-83bb-603fd3a7c489.png"
+                            <img src="https://sybiltec.com/images/certifications/9cb1831f-e10c-4694-83bb-603fd3a7c489.png"
                                     alt="Cryptography: Technologies for Securing Data and Communications">
                         </div>
                         <div class="col-2-4">
-                            <img src="images/certifications/e825c35e-112e-42d0-844a-ff3d16e1002a.png"
+                            <img src="https://sybiltec.com/images/certifications/e825c35e-112e-42d0-844a-ff3d16e1002a.png"
                                     alt="Deepfakes Decoded: Navigating Disinformation in the Digital Age">
                         </div>
                         <div class="col-2-4">
-                            <a href="https://www.credly.com/badges/a76f4589-140c-4495-8107-d3ee6ac4c933/public_url" target="_blank">
-                                <img src="images/certifications/google-cybersecurity-professional-certificate-v2.png"
+                            <a href="https://www.credly.com/badges/a76f4589-140c-4495-8107-d3ee6ac4c933/public_url" target="_blank" rel="noopener noreferrer">
+                                <img src="https://sybiltec.com/images/certifications/google-cybersecurity-professional-certificate-v2.png"
                                         alt="Google Cybersecurity Professional Certificate">
                             </a>
                         </div>
                         <div class="col-2-4">
-                            <img src="images/certifications/coursera-google-foundations-of-user-experience-ux-design.png"
+                            <img src="https://sybiltec.com/images/certifications/coursera-google-foundations-of-user-experience-ux-design.png"
                                     alt="Google Foundations of User Experience (UX) Design">
                         </div>
                     </div>
