--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -177,7 +177,7 @@ permalink: /small-business-web-design/
                 <div id="ken-chu-videography" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/clients/ken-chu-videography.jpg" alt="Ken Chu Videography">
+                            <img src="https://sybiltec.com/images/clients/ken-chu-videography.jpg" alt="Ken Chu Videography">
                         </div>
                         <div class="col-7">
                             <h2>Ken Chu Videography</h2>
@@ -197,7 +197,7 @@ permalink: /small-business-web-design/
                 <div id="Realizzato" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/clients/realizzato.jpg" alt="Realizzato">
+                            <img src="https://sybiltec.com/images/clients/realizzato.jpg" alt="Realizzato">
                         </div>
                         <div class="col-7">
                             <h2>Realizzato</h2>
