--- a/web-designer-bromley.html
+++ b/web-designer-bromley.html
@@ -311,7 +311,7 @@ permalink: /web-designer-bromley/
             <div class="row">
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="images/johniq-butchers.png" class="avatar" alt="JohniQ Butchers">
+                        <img src="https://sybiltec.com/images/johniq-butchers.png" class="avatar" alt="JohniQ Butchers">
                         <p><strong><em>Matias Quintero,<br>JohniQ Butchers</em></strong></p>
                         <div class="stars">
                             <img class="star" src="https://sybiltec.com/images/star.png">
@@ -325,7 +325,7 @@ permalink: /web-designer-bromley/
                 </div>
                 <div class="col-6">
                     <div class="testimonial-card">
-                        <img src="images/jenny-tomei.png" class="avatar" alt="Jenny Tomei">
+                        <img src="https://sybiltec.com/images/jenny-tomei.png" class="avatar" alt="Jenny Tomei">
                         <p><strong><em>Jenny Tomei,<br>Founder, JenUp CIC</em></strong></p>
                         <div class="stars">
                             <img class="star" src="https://sybiltec.com/images/star.png">
