--- a/contact.html
+++ b/contact.html
@@ -172,8 +172,8 @@ permalink: /contact/
                     <div class="col-6 contact-me">
                         <h2>Let's Work Together</h2>
                         <p>You won't find any AI chatbots on this website, so please feel free to contact me on the following details to speak with a real person. I look forward to hearing from you :)</p>
-                        <p><i class="fa-solid fa-phone"></i>Email: <a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></p>
-                        <p><i class="fa-solid fa-envelope"></i>Phone: <a href="tel:00447768059730">07768 059730</a></p>
+                        <p><i class="fa-solid fa-envelope"></i>Email: <a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></p>
+                        <p><i class="fa-solid fa-phone"></i>Phone: <a href="tel:00447768059730">07768 059730</a></p>
                         <h3>Opening Hours</h3>
                         <ul>
                             <li>Monday-Friday: 9am-5pm</li>
