--- a/training.html
+++ b/training.html
@@ -177,22 +177,6 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/events/FC-01-Online-Wellbeing-for-Women-Over-40-October-2025-940x492.png" alt="Online Wellbeing for Women Over 40">
-                        </div>
-                        <div class="col-7">
-                            <h3>Online Wellbeing for Women Over 40</h3>
-                            <p><strong>📅 Thursday 2nd October 2025, 11am-12pm BST</strong></p>
-                            <p>Learn tools and techniques to reset your online habits, and build confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload.</p>
-                            <div class="padding-btn">
-                                <a class ="btn-primary" href="https://www.eventbrite.com/e/online-wellbeing-for-women-over-40-a-free-webinar-tickets-1663261934219" target="_blank" rel="noopener noreferrer">Register Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
                             <img src="https://sybiltec.com/images/events/TB-03-Developing-a-Digital-Marketing-Strategy-940-492.png" alt="Developing a Digital Marketing Strategy">
                         </div>
                         <div class="col-7">
@@ -255,6 +239,11 @@ permalink: /training/
                 </div>
 
                 <h2>Past Workshops</h2>
+                    <div class="row">
+                    <div class="col-5"><div><img src="https://sybiltec.com/images/events/FC-01-Online-Wellbeing-for-Women-Over-40-October-2025-940x492.png" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
+                    <div class="col-7"><p>On 02 October 2025, I presented a 1-hour webinar entitled <em>Online Wellbeing for Women Over 40</em>. Learn tools and techniques to reset your online habits, and build confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://youtu.be/Og8hhIgtOe8" target="_blank" rel="noopener noreferrer">Online Wellbeing</a></div></div>
+                </div>
+
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/e-commerce-deep-dive-selling-your-products-online.jpg" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
                     <div class="col-7"><p>On 09 July 2024, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Greenwich.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/e-commerce-deep-dive-selling-your-products-online-tickets-899935169317" target="_blank" rel="noopener noreferrer">E-commerce Deep Dive</a></div></div>
